Ui unify scrollbar inner styles Fix adding new email / phone number when empty

--- a/packages/apps/spaces/pages/organization/organization.module.scss
+++ b/packages/apps/spaces/pages/organization/organization.module.scss
@@ -1,9 +1,13 @@
+@import "styles/mixins";
+
 .organizationIdCard {
   grid-area: idCard;
 }
 .organizationDetails {
+  @include scrollbar;
   grid-area: details;
   overflow-y: auto;
+
 }
 .communicationDetails {
   grid-area: contactDetails;
